--- a/style.css
+++ b/style.css
@@ -3,6 +3,19 @@
     margin: 0;
     box-sizing: inherit;
   }
+
+  nav {
+    display: block; /* default is block */
+    background-color: chocolate;
+    min-height: 50px;
+    }
+
+  .nav-item{
+    border: 3px solid black;
+    float: right;
+    font-size: 24px;
+    text-decoration: none;
+    }
   
   html {
     box-sizing: border-box;
